@@ -12,6 +12,7 @@ our $VERSION = '1.001000';
 # AUTHORITY
 
 use Moose qw( with has around );
+use Dist::Zilla::Util::ConfigDumper qw( config_dumper );
 use MooseX::AttributeShortcuts;
 
 with 'Dist::Zilla::Role::Bootstrap';
@@ -37,22 +38,9 @@ has module_map => (
     {};
   },
 );
-around 'dump_config' => sub {
-  my ( $orig, $self, @args ) = @_;
-  my $config    = $self->$orig(@args);
-  my $localconf = {};
-  for my $attribute (qw( module_map )) {
-    my $pred = 'has_' . $attribute;
-    if ( $self->can($pred) ) {
-      next unless $self->$pred();
-    }
-    if ( $self->can($attribute) ) {
-      $localconf->{$attribute} = $self->$attribute();
-    }
-  }
-  $config->{ q{} . __PACKAGE__ } = $localconf;
-  return $config;
-};
+
+around 'dump_config' => config_dumper( __PACKAGE__, { attrs => [qw( module_map )] } );
+
 around 'plugin_from_config' => sub {
   my ( $orig, $self, $name, $payload, $section ) = @_;
 
