@@ -5,6 +5,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001
  - Dist::Zilla::Plugin::Git::Contributors 0.006
 
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
  [Added / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.003001
 
